First version of complete Poligrounder README.txt